deployment/deployment-istio-flagger/namespace-w-istio.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: webtest-istio
  labels:
    istio-injection: enabled
