deployment/deployment-istio-flagger/webtest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webtest
  namespace: webtest-istio-flagger
  labels:
    app: webtest
    service: webtest
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
  selector:
    app: webtest
